client/src/App.scss
/* @import "../node_modules/@material/react-button/dist/button.min.css"; */
@import '../node_modules/@material/react-button/dist/button.css';
/* @import "./react-button-overrides"; */
/* @import '../node_modules/@material/react-material-icon/dist/material-icon.min.css'; */
@import '../node_modules/@material/react-material-icon/dist/material-icon.css';
@import '../node_modules/@material/react-top-app-bar/dist/top-app-bar.css';
@import "../node_modules/@material/react-drawer/dist/drawer.css";
@import '../node_modules/@material/react-list/dist/list.css';
@import '../node_modules/@material/react-button/dist/button.css';
@import '../node_modules/@material/react-typography/dist/typography.css';
@import '../node_modules/@material/react-card/dist/card.css';
@import "../node_modules/@material/react-dialog/dist/dialog.css";
@import '../node_modules/@material/react-text-field/dist/text-field.css';
@import '../node_modules/@material/react-select/dist/select.css';
@import '../node_modules/@material/react-icon-button/dist/icon-button.css';

.mdc-text-field--focused:not(.mdc-text-field--disabled) .mdc-floating-label{
  color:rgb(104, 161, 96);
}

.mdc-text-field .mdc-line-ripple{
  background-color: #54aa54;
}

.mdc-list-item--selected,
.mdc-list-item--activated {
  color: rgb(104, 161, 96);
  /* @alternate */
  color: var(--mdc-theme-primary, rgb(104, 161, 96)); }
  .mdc-list-item--selected .mdc-list-item__graphic,
  .mdc-list-item--activated .mdc-list-item__graphic {
    color: rgb(104, 161, 96);
    /* @alternate */
    color: var(--mdc-theme-primary, rgb(104, 161, 96)); }

// :not(.mdc-list--non-interactive) > :not(.mdc-list-item--disabled).mdc-list-item {

//   :not(.mdc-list--non-interactive) > :not(.mdc-list-item--disabled).mdc-list-item--activated::before, :not(.mdc-list--non-interactive) > :not(.mdc-list-item--disabled).mdc-list-item--activated::after {
//     background-color: rgb(104, 161, 96); }
//     @supports not (-ms-ime-align: auto) {
//       :not(.mdc-list--non-interactive) > :not(.mdc-list-item--disabled).mdc-list-item--activated::before, :not(.mdc-list--non-interactive) > :not(.mdc-list-item--disabled).mdc-list-item--activated::after {
//         /* @alternate */
//         background-color: var(--mdc-theme-primary, rgb(104, 161, 96)); } }
//         :not(.mdc-list--non-interactive) > :not(.mdc-list-item--disabled).mdc-list-item--selected::before, :not(.mdc-list--non-interactive) > :not(.mdc-list-item--disabled).mdc-list-item--selected::after {
//           background-color: rgb(104, 161, 96); }
//           @supports not (-ms-ime-align: auto) {
//             :not(.mdc-list--non-interactive) > :not(.mdc-list-item--disabled).mdc-list-item--selected::before, :not(.mdc-list--non-interactive) > :not(.mdc-list-item--disabled).mdc-list-item--selected::after {
//               /* @alternate */
//               background-color: var(--mdc-theme-primary, rgb(104, 161, 96)); } }
// }

:not(.mdc-list--non-interactive) > :not(.mdc-list-item--disabled).mdc-list-item--selected::before, :not(.mdc-list--non-interactive) > :not(.mdc-list-item--disabled).mdc-list-item--selected::after {
  background-color: rgb(104, 161, 96); }
  @supports not (-ms-ime-align: auto) {
    :not(.mdc-list--non-interactive) > :not(.mdc-list-item--disabled).mdc-list-item--selected::before, :not(.mdc-list--non-interactive) > :not(.mdc-list-item--disabled).mdc-list-item--selected::after {
      /* @alternate */
      background-color: var(--mdc-theme-primary, rgb(104, 161, 96)); } }


// :not(.mdc-list--non-interactive) > :not(.mdc-list-item--disabled).mdc-list-item--selected::before, :not(.mdc-list--non-interactive) > :not(.mdc-list-item--disabled).mdc-list-item--selected::after {
//   ￼    background-color: #54aa54;
//   }

// :not(.mdc-list--non-interactive) > :not(.mdc-list)

// Navbar
.mdc-top-app-bar__section {
  background-color:#54aa54;
  .mdc-button{
    background-color: rgb(104, 161, 96);
    color: rgb(64, 88, 74);
  }
  // .mdc-card,.demo-card__primary, .demo-card__secondary,.demo-card__title {
  //   background-color: rgb(20, 131, 38);
  //   color: #a4f0a1;
  // }
}

.mdc-line-ripple {

}

// Main Page (Cards)
.demo-card__primary {
  text-align: left;
}
.demo-card__secondary {
    margin: 10px;
    padding-left: 10x;
    text-align: left;
    font-weight: bold;
}
.demo-card__title {
  margin: 10px;
  font-weight: bold;
}
.mdc-card__primary-action {
  background-color: #d5f0d4;
  color: rgb(64, 88, 74);
// background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ2kTwK68DduS92O9n9b5BjPagDUi1VwCvk3ygSiAnZgCWfSJBA");
// background-position: center;
// background-size: cover;
// background-repeat: no-repeat;
}

// Landing Page
.login-container, .register-container {
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-content: center;
  align-items: center;
  justify-content: center;
  background-color: #54aa54;
   
}
.login-form, .register-form {
  padding: 0;
  // border: 1px solid #ccc;
  border-radius: 10px;
  overflow: hidden;
  width: 50%;
  h2{
    padding: 25px;
    margin: 0 0 25px 0;
    color: #fff;
    background-color:#54aa54;;
    text-align: center;
  }
  .input-field {
    display: flex;
    flex-direction: column;
    align-content: center;
    align-items: center;
    justify-content: center;
    padding: 10px;
  }
  .buttonContainer{
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  .form-group{
    margin: 20px 0 20px;
  }
  .mdc-button {
  border: 1px solid #ccc;
  background-color: #54aa54;
  color:white;
  // margin: 0 0 10px 180px;
  align-content: right;
  display: flex;
  flex-direction: column;
  align-content: right;
  align-items: center;
  justify-content: right;
  padding: 10px;

}
}

.newPost-Container {
  border: 1px solid #ccc;
  border-radius: 10px;
  width: 700px;
  margin: auto;
}

.spread_btn {
  display: flex;
  justify-content: space-between;
  .link {
    text-decoration: none;;
  }
}

// NewPost Page
.newPost-form {
  // display:flex;
  // grid-template-columns: 5fr;
  // flex-direction: column;
  // align-content: left;
  // align-items: left;
  // justify-content: left;
  color: rgb(64, 88, 74);
  padding: 40px;
  background-color: white;
  // grid-template-columns: 1fr;
  // margin: 5rem;
 
  overflow: hidden;
  margin: 20px;
  .mdc-text-field {
    width: 50%;
  }
  .mdc-button {
    background-color:#54aa54;
    color: white;
    margin: 20px;
    width:150px;

  }

}

// Details Page
  @media (min-width: 700px) {
   .details-content {
      display:grid;
      grid-template-columns: 1fr 1fr;
      align-content: left;
      align-items: left;
      justify-content: left;
      padding: 0;
      color: rgb(64, 88, 74);

      .mdc-button{
        background-color:#54aa54;
        margin: 20px;
        width:150px;
        color: white;
      }

      .details-button{
        display:flex;
        align-items: start;
        justify-content: flex-start;
        .mdc-button.ml-0{
          margin-left: 0;
        }
        .mdc-button{
          background-color:#54aa54;
          margin: 20px;
          width:150px;
          color: white;
        }
        .link {
          text-decoration: none;
        }
      }
    }
    .details-container {
      padding: 50px;
      position: relative;
      .delete-btn{
        position: absolute;
        right: 10px;
        top:10px;
      }
    }
    svg {
      color: rgb(253, 37, 37);
    }

    .details {
      margin: 100px;
    }
}

#searchTextField {
  border-radius: 50px;
}

.demo-text-field-shaped {
  border-radius: 16px 16px 0 0;
}

.demo-text-field-outlined-shaped .mdc-notched-outline .mdc-notched-outline__leading {
  /* @noflip */
  border-radius: 28px 0 0 28px;
  width: 28px;
}
[dir=rtl] .demo-text-field-outlined-shaped .mdc-notched-outline .mdc-notched-outline__leading, .demo-text-field-outlined-shaped .mdc-notched-outline .mdc-notched-outline__leading[dir=rtl] {
  /* @noflip */
  border-radius: 0 28px 28px 0;
}
.demo-text-field-outlined-shaped .mdc-notched-outline .mdc-notched-outline__notch {
  max-width: calc(100% - 28px * 2);
}
.demo-text-field-outlined-shaped .mdc-notched-outline .mdc-notched-outline__trailing {
  /* @noflip */
  border-radius: 0 28px 28px 0;
}
[dir=rtl] .demo-text-field-outlined-shaped .mdc-notched-outline .mdc-notched-outline__trailing, .demo-text-field-outlined-shaped .mdc-notched-outline .mdc-notched-outline__trailing[dir=rtl] {
  /* @noflip */
  border-radius: 28px 0 0 28px;
}
.demo-text-field-outlined-shaped .mdc-text-field__input {
  /* @noflip */
  padding-left: 32px;
  /* @noflip */
  padding-right: 0;
}
[dir=rtl] .demo-text-field-outlined-shaped .mdc-text-field__input, .demo-text-field-outlined-shaped .mdc-text-field__input[dir=rtl] {
  /* @noflip */
  padding-left: 0;
  /* @noflip */
  padding-right: 32px;
}
.demo-text-field-outlined-shaped + .mdc-text-field-helper-line {
  /* @noflip */
  padding-left: 32px;
  /* @noflip */
  padding-right: 28px;
}
[dir=rtl] .demo-text-field-outlined-shaped + .mdc-text-field-helper-line, .demo-text-field-outlined-shaped + .mdc-text-field-helper-line[dir=rtl] {
  /* @noflip */
  padding-left: 28px;
  /* @noflip */
  padding-right: 32px;
}
.detail-img-container{
margin: auto;
}
// body {
//    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ2kTwK68DduS92O9n9b5BjPagDUi1VwCvk3ygSiAnZgCWfSJBA");
//   //  url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQNz0kLZCi1qg-8W0UGAzSTjdPmK7E6cLlh4nG6GbMJcKmYB6XBSA");
//   //  URL("https://wallpapercave.com/wp/BiOMtoB.jpg");
//   //  url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTzuvxfjjfnGm8YwjAdVq98bv_12LICD5ZzpwXhf9V5hJocFcPh");
//    background-repeat: no-repeat;
//    background-position: center;
//    background-size: cover;
// }

// Message Page
@media (min-width: 700px) {
  .message-container {
    padding: 50px;
    position: relative;
    color: rgb(64, 88, 74);
    .delete-btn{
      position: absolute;
      right: 10px;
      top:10px;
    }
  
  }
  svg {
    color: rgb(253, 37, 37);
  }

  .forum-content {
    display:grid;
    grid-template-columns: 1fr 1fr;
    align-content: left;
    align-items: left;
    justify-content: left;
    padding: 0;
  }
  .messages {
    border: 1px solid #ccc;
    border-radius: 10px;
    padding: 20px;

    .form-control {
      margin: 10px;
      width: 80%;
    }

    .btn{
      background-color:#54aa54;
      margin: 20px;
      width:150px;
      color: white;
    }
  }
 
}




/* 
 .sidebar{
   background-color: #efefef;
   height: 100vh;
   padding: 40px;
 } */

 /* Mobile */
//  @media (min-width: 100px){
//    .sidebar{
//      display:none;
//    } 
//    .main-container{
//      display: grid;
//      grid-template-columns: 1fr;
//      grid-gap: 30px;
//    }

//    .navbar-toggler {
//      display: block;
//    }
//  } 

// /* Desktop */
// @media (min-width: 700px){
//   .sidebar{
//     display: block;
//   } 
//   .main-container{
//     display: grid;
//     grid-template-columns: 2fr 9fr;
//     grid-gap: 30px;
//   }
//   .navbar-toggler {
//     display: none;
//   }
//   .img-container{
//     width: 20%;
//     display: grid;
//     grid-template-columns: 1fr;
//     margin: 50px;
//   }
  
// }

// .each-nav-item:hover {
//   cursor: pointer;
//   font-weight: bold;
// }

// .jumbotron {
//   text-align: center;
//   margin: 0;
// }

